// Copyright 2017 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package protodb;

message RequestHeader {
  optional string key = 1;
  optional string value = 2;
}

// Stores the HTTP request params associated with a download request.
message RequestParams {
  optional string url = 1;
  optional string method = 2;
  repeated RequestHeader headers = 3;
  optional bool fetch_error_body = 4;
  optional bool require_safety_checks = 5 [default = true];
  optional int32 credentials_mode = 6;  // network::mojom::CredentialsMode.
}
